# cmd/shortener-api/docs/swagger.json
@@ -47,9 +47,23 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Links"
+                    "links"
                 ],
                 "summary": "Get links",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "limit pagination records",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "specify pagination page",
+                        "name": "page",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -58,6 +72,13 @@
                             "items": {
                                 "$ref": "#/definitions/handler.GetLinksResponse"
                             }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
                         }
                     }
                 }
@@ -87,6 +108,42 @@
                         "description": "Created",
                         "schema": {
                             "$ref": "#/definitions/handler.CreateLinkResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
+        },
+        "/links/{id}": {
+            "get": {
+                "description": "Fetch link by Id",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "links"
+                ],
+                "summary": "Get link",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Link ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/handler.GetLinkResponse"
                         }
                     },
                     "400": {
@@ -131,6 +188,22 @@
                 }
             }
         },
+        "handler.GetLinkResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/handler.LinkSample"
+                },
+                "message": {
+                    "type": "string",
+                    "example": "Records fetched successfully!"
+                },
+                "status": {
+                    "type": "boolean",
+                    "example": true
+                }
+            }
+        },
         "handler.GetLinksResponse": {
             "type": "object",
             "properties": {
@@ -166,6 +239,10 @@
         "handler.LinkSample": {
             "type": "object",
             "properties": {
+                "clicks": {
+                    "type": "integer",
+                    "example": 10
+                },
                 "created_at": {
                     "type": "string",
                     "example": "2026-02-02T00:00:00Z"
